<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/hero" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/black"
            android:backgroundTint="@color/black">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/gratis"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:text="@string/_300_seat"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sosialisasi_literasi"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline"
                android:textColor="@color/orange"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">
            <TableRow>
                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/jasa" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otorisasi_jasa_keuangan"/>
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/ic_baseline_calendar_month_24"
                    android:contentDescription="@string/calendar" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"/>
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/ic_baseline_location_on_24"
                    android:contentDescription="@string/street" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jalan"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>